--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,9 +1,58 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
  My Blog
 {% endblock %}
 
+{% block css_files %}
+<link rel="stylesheet" href="{% static 'blog/index.css' %}">
+{% endblock %}
+
 {% block content %}
-    <h1>Welcome to my blog</h1>
+<!--<h1>Welcome to my blog</h1>-->
+    <header id="main-navigation">
+        <h1>
+            <a href="">Andrii's Blog</a>
+        </h1>
+        <nav>
+            <a href="">All Posts</a>
+        </nav>
+
+    </header>
+
+    <section id="welcome">
+        <header>
+            <img src="" alt="Author of this blog">
+            <h2> Andrii's Blog</h2>
+        </header>
+        <p>Hi, I am Andrii and I love to blog about tech and the world</p>
+    </section>
+
+    <section id="latest-posts">
+        <h2>
+            My Latest Thoughts
+        </h2>
+        <ul>
+            <li>
+                <article class="post">
+                    <a href="">
+                        <img src="" alt="Mountain Hiking">
+                        <div class="post__content">
+                            <h3>Mountain Hiking</h3>
+                        <p>There's nothing like the views yiu get when hiking in the mountains! And I wasn't even prepared for wat happened whilst I was enjoying  the view!</p>
+                        </div>
+                    </a>
+                </article>
+            </li>
+        </ul>
+    </section>
+
+<section id="about">
+    <h2>What I Do</h2>
+    <p>I love programming, and I enjoy exploring new technologies!</p>
+    <p>My goal is to keep growing as a developer.</p>
+
+</section>
+
 {% endblock %}
