Added Images as Static Files

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -23,7 +23,7 @@
 
     <section id="welcome">
         <header>
-            <img src="" alt="Author of this blog">
+            <img src="{% static 'blog/images/me.jpg' %}" alt="Author of this blog">
             <h2> Andrii's Blog</h2>
         </header>
         <p>Hi, I am Andrii and I love to blog about tech and the world</p>
@@ -37,7 +37,7 @@
             <li>
                 <article class="post">
                     <a href="">
-                        <img src="" alt="Mountain Hiking">
+                        <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking">
                         <div class="post__content">
                             <h3>Mountain Hiking</h3>
                         <p>There's nothing like the views yiu get when hiking in the mountains! And I wasn't even prepared for wat happened whilst I was enjoying  the view!</p>
