Added the All Posts Page & Style

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,21 +6,12 @@
 {% endblock %}
 
 {% block css_files %}
+<link rel="stylesheet" href="{% static 'blog/post.css' %}">
 <link rel="stylesheet" href="{% static 'blog/index.css' %}">
 {% endblock %}
 
 {% block content %}
 <!--<h1>Welcome to my blog</h1>-->
-    <header id="main-navigation">
-        <h1>
-            <a href="">Andrii's Blog</a>
-        </h1>
-        <nav>
-            <a href="">All Posts</a>
-        </nav>
-
-    </header>
-
     <section id="welcome">
         <header>
             <img src="{% static 'blog/images/me.jpg' %}" alt="Author of this blog">
@@ -34,17 +25,7 @@
             My Latest Thoughts
         </h2>
         <ul>
-            <li>
-                <article class="post">
-                    <a href="">
-                        <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking">
-                        <div class="post__content">
-                            <h3>Mountain Hiking</h3>
-                        <p>There's nothing like the views yiu get when hiking in the mountains! And I wasn't even prepared for wat happened whilst I was enjoying  the view!</p>
-                        </div>
-                    </a>
-                </article>
-            </li>
+            {% include 'blog/includes/post.html'%}
         </ul>
     </section>
 
