--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,15 @@
     {% block css_files %}{% endblock %}
 </head>
 <body>
+<header id="main-navigation">
+        <h1>
+            <a href="">Andrii's Blog</a>
+        </h1>
+        <nav>
+            <a href="">All Posts</a>
+        </nav>
+
+    </header>
     {% block content %}
     {% endblock %}
 </body>
