--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,10 @@
 <body>
 <header id="main-navigation">
         <h1>
-            <a href="">Andrii's Blog</a>
+            <a href="{% url 'starting-page' %}">Andrii's Blog</a>
         </h1>
         <nav>
-            <a href="">All Posts</a>
+            <a href="{% url 'posts-page' %}">All Posts</a>
         </nav>
 
     </header>
