Added Dummy Data to the Views File

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -25,7 +25,9 @@
             My Latest Thoughts
         </h2>
         <ul>
-            {% include 'blog/includes/post.html'%}
+            {% for post in posts %}
+                {% include 'blog/includes/post.html'%}
+            {% endfor%}
         </ul>
     </section>
 
