--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -2,11 +2,11 @@
 
 <li>
     <article class="post">
-        <a href="{% url 'post-detail-page' 'the-mountains' %}">
-            <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking">
+        <a href="{% url 'post-detail-page' post.slug %}">
+            <img src="{% static 'blog/images/'|add:post.image %}" alt="{{post.title}}">
             <div class="post__content">
-                <h3>Mountain Hiking</h3>
-            <p>There's nothing like the views yiu get when hiking in the mountains! And I wasn't even prepared for wat happened whilst I was enjoying  the view!</p>
+                <h3>{{ post.title}}</h3>
+            <p>{{post.excerpt}}</p>
             </div>
         </a>
     </article>
