Added a Single Post Page

--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -16,12 +16,9 @@
         My Collected Posts
     </h2>
     <ul>
+        {% for post in all_posts %}
         {% include 'blog/includes/post.html'%}
-        {% include 'blog/includes/post.html'%}
-        {% include 'blog/includes/post.html'%}
-        {% include 'blog/includes/post.html'%}
-        {% include 'blog/includes/post.html'%}
-        {% include 'blog/includes/post.html'%}
+        {% endfor %}
     </ul>
 </section>
 {% endblock %}ц
