--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -29,4 +29,10 @@
 <main>
   {{post.content|linebreaks}}
 </main>
+<div>
+    <form >
+        {{ comment_form }}
+    <button>Save Comment</button>
+    </form>
+</div>
 {% endblock %}
