--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -29,10 +29,18 @@
 <main>
   {{post.content|linebreaks}}
 </main>
-<div>
-    <form >
-        {{ comment_form }}
+<section id="comment-form">
+  <h2>Your Comment</h2>
+  <form>
+    {% csrf_token %}
+    {% for form_field in comment_form %}
+      <div class="form-control">
+        {{ form_field.label_tag }}
+        {{ form_field }}
+        {{ form_field.errors }}
+      </div>
+    {% endfor %}
     <button>Save Comment</button>
-    </form>
-</div>
+  </form>
+</section>
 {% endblock %}
