--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -31,7 +31,7 @@
 </main>
 <section id="comment-form">
   <h2>Your Comment</h2>
-  <form>
+  <form  action="{% url "post-detail-page" post.slug %}" method="POST">
     {% csrf_token %}
     {% for form_field in comment_form %}
       <div class="form-control">
