Managing Read Later via Session

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
             <a href="{% url 'starting-page' %}">Andrii's Blog</a>
         </h1>
         <nav>
+            <a href="{% url "read-later" %}">Stored Posts</a>
             <a href="{% url 'posts-page' %}">All Posts</a>
         </nav>
 
