--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -57,6 +57,25 @@ body {
   font-weight: bold;
 }
 
+#read-later {
+  margin: 2rem 0;
+}
+
+#read-later button {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 0.5rem 2rem;
+  font: inherit;
+  color: white;
+  cursor: pointer;
+}
+
+#read-later button:hover,
+#read-later button:active {
+  background-color: white;
+  color: #390281;
+}
+
 main {
   width: 90%;
   max-width: 90rem;
@@ -72,9 +91,7 @@ main {
   color: #390281;
   padding: 0.5rem 1rem;
   border-radius: 8px;
-  margin: 3px;
 }
-
 
 #comment-form {
   margin: 3rem auto;
